fix service list not centered.

--- a/src/modules/scheduling/css/serviceList.scss
+++ b/src/modules/scheduling/css/serviceList.scss
@@ -199,8 +199,8 @@
                 }
 
        .services-list-container ul li.service-details{
-            width: 78%;
-            margin: 0 10px 10px 20px;
+            width: 76%;
+            margin: 0 auto 10px auto;
        }
     }
 }
